@startuml database

entity User {
    * id : string <<PK>>
    --
    email: string
    username: string
    password: string
    role: string
    number_phone: string
    zalo_phone: string
    facebook_url: string
    avatar_url: string
    ---
    created_at: datetime
    updated_at: datetime
}

entity Course {
    * id : string <<PK>>
    --
    name: string
    tags: string
    description: string
    course_image: string <<FK>> (UploadedAsset)
    start_time: Date
    end_time: Date
    status: string
    author_id: string <<FK>> (User)
    files: string[] <<FK>> (UploadedAsset)
    survey_request: string
    reviews: string
    students: string[] <<FK>> (User)
    teachers: string[] <<FK>> (User)
    discusses: string[] <<FK>> (Discuss)
    sections: string[] <<FK>> (Section)
    summary: string
    start_registration: Date
    end_registration: Date
    introduction: string
    content_introduction: string
    teacher_introduction: string
    ---
    created_at: datetime
    updated_at: datetime
}

entity Contest {
    * id : string <<PK>>
    --
    name: string
    tags: string
    description: string
    course_image: string <<FK>> (UploadedAsset)
    start_time: Date
    end_time: Date
    status: string
    author_id: string <<FK>> (User)
    files: string[] <<FK>> (UploadedAsset)
    survey_request: string
    reviews: string
    students: string[] <<FK>> (User)
    teachers: string[] <<FK>> (User)
    discusses: string[] <<FK>> (Discuss)
    sections: string[] <<FK>> (Section)
    summary: string
    start_registration: Date
    end_registration: Date
    introduction: string
    content_introduction: string
    teacher_introduction: string
    ---
    created_at: datetime
    updated_at: datetime
}


entity Question{
    *id: string<<PK>>
    custom_question_id: string
    title: string
    description: string
    author_id: string <<FK>> (User)
    points: number
    difficulty_level: string
    status: string
    type: string
    comment: string
    course_id: string <<FK>> (Course)
    answer: string
    ---
    created_at: datetime
    updated_at: datetime
}

entity QuestionChoice{
    *id: string<<PK>>
    question_id: string <<FK>> (Question)
    content: string
    point: number
    order: number
    description: string
    is_correct: boolean
    author_id: string <<FK>> (User)
    ---
    created_at: datetime
    updated_at: datetime
}

entity QuestionPoint{
    *id: string<<PK>>
    point: number
    order: number
    question_id: string <<FK>> (Question)
    author_id: string <<FK>> (User)
    exam_id: string <<FK>> (Exam)
    automatically_graded: boolean
    ---
    created_at: datetime
    updated_at: datetime
}

entity Exam{
    *id: string<<PK>>
    name: string
    exam_id: string
    password: string
    exam_time: number
    point_ladder: number
    pass_point: number
    description: string
    evaluation_criteria: string
    retry_times_number: number
    start_time: Date
    end_time: Date
    author_id: string <<FK>> (User)
    comment: string
    course_id: string
    total_point: number
    question_number: number
    ---
    created_at: datetime
    updated_at: datetime
}

entity ExamSubmit {
    *id: string<<PK>>
    author_id: string <<FK>> (User)
    exam: string <<FK>> (Exam)
    status: string
    score: number
    correct_answer: number
    start_time: Date
    end_time: Date
    ---
    created_at: datetime
    updated_at: datetime
}

entity ExamScore {
    *id: string<<PK>>
    author_id: string <<FK>> (User)
    exam: string <<FK>> (Exam)
    exam_submit: string <<FK>> (ExamSubmit)
    total_point: number
    correct_answer: number
    score: number
    ---
    created_at: datetime
    updated_at: datetime
}

entity Answer {
    *id: string<<PK>>
    author_id: string <<FK>> (User)
    question_point: string <<FK>> (QuestionPoint)
    exam_submit: string <<FK>> (ExamSubmit)
    is_correct_answer: boolean
    submitted_time: Date
    question_choice: string[] <<FK>> (QuestionChoice)
    answer: string
    ---
    created_at: datetime
    updated_at: datetime
}

entity UploadedAsset{
    *id: number<<PK>>
    --
    asset_url: string
    file_type: string
    is_used: boolean
    user_id: number <<FK>> (User)
    --
    created_at: datetime
    updated_at: datetime
}

entity Section {
    *id: string<<PK>>
    name?: string;
    course_id: string <<FK>> (Course)
    order?: number
    visible?: boolean
    ---
    created_at: datetime
    updated_at: datetime
}

entity Lesson {
    *id: string<<PK>>
    course_id?: string <<FK>> (Course)
    section_id: string <<FK>> (Section)
    order?: number
    name?: string
    description?: string
    embed_file?: string
    documents?: string[] <<FK>> (UploadedAsset)
    exam?: string <<FK>> (Exam)
    type?: string
    ---
    created_at: datetime
    updated_at: datetime
}

entity Discuss {
    *id: string<<PK>>
    title?: string
    content?: string
    author_id?: string <<FK>> (User)
    course_id?: string <<FK>> (Course)
    contest_id?: string <<FK>> (Contest)
    ---
    created_at: datetime
    updated_at: datetime
}

entity Comment {
    *id: string<<PK>>
    content: string;
    discuss_id: string <<FK>> (Discuss)
    author_id: string <<FK>> (User)
    rate?: number
    ---
    created_at: datetime
    updated_at: datetime
}

entity Blog {
    *id: string<<PK>>
    title: string;
    author_id: string <<FK>> (User)
    content: string;
    ---
    created_at: datetime
    updated_at: datetime
}


'User |o..|| UserRole
'User ||..o{ UserConference
'User ||..o{ UploadedAsset
'User ||..o{ Preference
'User ||..o{ Notification
'Conference ||-left..o{ Notification
'UserConference }o..|| Conference
'User |o..|| EmailVerification
Course }o-down..|| User
Contest }o-down..|| User
'User ||-right..o{ Course
'User ||..o{ Contest
User ||..o{ Question
User ||..o{ QuestionChoice
User ||..o{ QuestionPoint
User ||..o{ Exam
User ||..o{ ExamSubmit
User ||..o{ ExamScore
User ||..o{ Answer
User ||..o{ UploadedAsset
User ||..o{ Discuss
User ||..o{ Comment
Blog ||-left..|| User

QuestionChoice }o-down..|| Question
Question ||-down..o{ QuestionPoint

Exam ||-down..|{ QuestionPoint
Exam ||..o{ ExamSubmit
Answer }|..|| ExamSubmit
ExamSubmit ||..|| ExamScore
Answer ||-down..o{ QuestionChoice

Course ||..o{ Section
Section ||..o{ Lesson
Lesson ||..o{ UploadedAsset
Lesson ||..o| Exam

Contest ||..o{ Section
Course ||..o| UploadedAsset
Contest ||..o| UploadedAsset

Course ||..o| Discuss
Contest ||..o| Discuss
Discuss ||..o{ Comment

@enduml
